--- a/AndroidActivity-P7/app/src/main/res/layout/activity_main.xml
+++ b/AndroidActivity-P7/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="34dp"
         android:id="@+id/registrationBtn"
+        android:onClick="onClick"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
@@ -36,6 +37,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="30dp"
         android:id="@+id/loginBtn"
+        android:onClick="onClick"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
